<resources>
    <string name="app_name">FOOD 4 NEED</string>
    <string name="enter_email">Enter Your E-Mail </string>
    <string name="enter_password">Enter Your Password</string>
    <string name="login">LOGIN</string>
    <string name="forget_password">FORGOT PASSWORD?</string>
    <string name="signup"> SIGN UP </string>
    <string name="PREFFILENAME">FOOD4NEEDPREF</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>